# PlasmaRepo

./: .env  .gitattributes  .gitignore  PlasmaWorkspace.code-workspace  README.md
FluxTheory/: fluxTest.py  qlFlux.py  readFlux.py
HasegawaMima/: hm.py  hmETG.py  readOutput.py
HasegawaMima/C/: BLAS_LAPACK_funcs.cmake  CMakeLists.txt
HasegawaMima/C/HM_C/: CMakeLists.txt  HM_Definitions.hpp  HM_Initializer.hpp  HM_Modeler.cpp  HM_Modeler.hpp  main.cpp
HasegawaMima/Python/: hm.py  hmETG.py  readOutput.py
MyPapers/QuasilinearTheory/: QuasilinearTheory.toc
Notes/FFT/: ipython_fft_example.ipynb
Papers/: QuasilinearTheory.aux  QuasilinearTheory.fdb_latexmk  QuasilinearTheory.fls  QuasilinearTheory.tex
Papers/QuasilinearTheory/: QuasilinearTheory.aux  QuasilinearTheory.fdb_latexmk  QuasilinearTheory.fls  QuasilinearTheory.out  QuasilinearTheory.tex  QuasilinearTheory.toc
Presentations/: .~lock.ETG_Turbulence.mpeg#
Presentations/2. ETG_Turbulence/: .~ETG_Turbulence_Final.pptx  .~lock.ETG_Turbulence_Final.pptx#  ETG_Turbulence.pptx
geneScripts/: PhysicalUnits.ipynb  comparePlotsGENE.py  plotFlux.py  plotFluxes.ipynb  plotFluxes.py  plotGrowthRates.py  plotPhi.py  plotPhiModes.py  readAmpSpectra.py
geneScripts/GoerlerETG/: .nrgsummaryelectrons_0021_0025.dat.swp  nrgsummary_0021_0025.ps  runCase.sh
geneScripts/GoerlerImpLin/: description.txt
geneScripts/GoerlerImpurities/: .parameters_neon.swp  .parameters_tungsten.swp  nrgsummary_argon.ps  nrgsummary_beryllium.ps  nrgsummary_custom.ps  nrgsummary_molybdenum.ps  nrgsummary_neon.ps  nrgsummary_neon_ad.ps  (+14 more)
(+381 files in other folders)
